@@ -1,11 +1,11 @@
 "name";"value";"ECrel";"PPrel";"GErel";"Explanation";"color";"label";"fontcolor";"arrowhead";"style"
 "compound";"attribute";TRUE;TRUE;FALSE;"shared with two successive reactions (ECrel) or intermediate of two interacting proteins (PPrel)";"black";;"black";"open";"solid"
 "hidden compound";"attribute";TRUE;FALSE;FALSE;"shared with two successive reactions but not displayed in the pathway map";"grey";;"black";"open";"solid"
-"activation";"-->";FALSE;TRUE;FALSE;"positive and negative effects which may be associated with molecular information below";"red";;"black";"open";"solid"
-"inhibition";"--|";FALSE;TRUE;FALSE;"positive and negative effects which may be associated with molecular information below";"blue";;"red";"open";"solid"
-"expression";"-->";FALSE;FALSE;TRUE;"interactions via DNA binding";"red";;"black";"open";"dashed"
-"repression";"--|";FALSE;FALSE;TRUE;"interactions via DNA binding";"blue";;"red";"open";"dashed"
-"indirect";"..>";FALSE;TRUE;TRUE;"indirect effect without molecular details";"black";;"black";"open";"dotted"
+"activation";"-->";FALSE;TRUE;FALSE;"positive and negative effects which may be associated with molecular information below";"red";;"black";"normal";"solid"
+"inhibition";"--|";FALSE;TRUE;FALSE;"positive and negative effects which may be associated with molecular information below";"blue";;"red";"tee";"solid"
+"expression";"-->";FALSE;FALSE;TRUE;"interactions via DNA binding";"red";;"black";"normal";"dashed"
+"repression";"--|";FALSE;FALSE;TRUE;"interactions via DNA binding";"blue";;"red";"tee";"dashed"
+"indirect";"..>";FALSE;TRUE;TRUE;"indirect effect without molecular details";"black";;"black";"normal";"dotted"
 "state change";"...";FALSE;TRUE;FALSE;"state transition";"black";;"black";"none";"dotted"
 "binding/association";"---";FALSE;TRUE;FALSE;"association and dissociation";"black";;"black";"none";"dashed"
 "dissociation";"-+-";FALSE;TRUE;FALSE;"association and dissociation";"grey";;"black";"open";"dotted"
